# pytarjas

./: .env.development  .gitignore  README.md  config.py  delete_tables.sql  main.py  pyproject.toml  requirements.txt
pytarjas/: __init__.py  admin.py  auth.py  blog.py  client.py  dbs.py  forms.py  helper.py  planifications.py  planner.py  tasks.py  worker.py
pytarjas/blueprints/artifacts/: forms.py  plannings.py  tasks.py  users.py
pytarjas/blueprints/roles/: admin.py  client.py  planner.py  worker.py
pytarjas/models/: docs_models.py  user_models.py
pytarjas/services/: __init__.py  pdf_service.py  storage_service.py
pytarjas/static/: manifest.json  style.css
pytarjas/static/css/: base.css  components.css  forms.css  layout.css  offline.css  users_list.css
pytarjas/static/js/: auth.js  main.js
pytarjas/templates/: base.html
pytarjas/templates/admin/: create_user.html  edit_user.html  index.html  list_users.html
pytarjas/templates/auth/: login.html
pytarjas/templates/forms/: create_form.html  create_forms.html  edit_form.html  edit_forms.html  list_forms.html
pytarjas/templates/includes/: footer.html  navbar.html
pytarjas/templates/pdfs/: tarja_consolidado.html  tarja_template.html
pytarjas/templates/planner/: index.html
pytarjas/templates/plannings/: create_plannings.html  edit_plannings.html  list_planifications.html  (+1 more)
scripts/: create_admin.py  create_form.sql  create_objects.sql  create_users.py  delete_tables.sql  run_setup.sh
tests/: conftest.py  helper.py  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_user_models.py
(+47 files in other folders)
