[project]
name = "pytarjas"
version = "0.1.0"
description = "Tarjas portal for HGT Inland Services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "click==8.2.1",
    "flask[async]==3.1.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "sentry-sdk[flask]>=2.35.2",
    "werkzeug==3.1.3",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "pytest>=8.4.1",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

