[project]
name = "pytarjas"
version = "0.1.0"
description = "Tarjas portal for HGT Inland Services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "click==8.2.1",
    "dotenv>=0.9.9",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "flask[async]==3.1.2",
    "gunicorn>=23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "psycopg2-binary>=2.9.10",
    "sentry-sdk[flask]>=2.35.2",
    "weasyprint>=67.0",
    "werkzeug==3.1.3",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
    "pytest-cov>=7.0.0",
    "coverage>=7.10.6",
    "pytest>=8.4.2",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

